<resources>
    <string name="app_name">同人</string>
    <string name="octorye_title">同人</string>
    <string name="title_home">首页</string>
    <string name="title_discovery">发现</string>
    <string name="title_my">我</string>
    <string name="default_content_title">文章</string>
    <string name="author_section">作者</string>
    <string name="focus_on">+关注</string>
    <string name="focusing">已关注</string>
    <string name="authorName_prefix">文/</string>
    <string name="exit_tip_text">再按一次退出</string>
    <string name="wechat_login_text">微信\n登录</string>
    <string name="phone_sign_up_text">手机\n登录</string>
    <string name="other_login_mode_text">其他方式登录</string>
    <string name="login_mode_detail">收藏你最喜欢的内容，分享给\n身边的人，关注优质作者</string>

    <!-- TODO: open source -->
    <string name="look_more">查看更多</string>
    <string name="title_activity_content_detail">ContentDetailActivity</string>

    <string name="title_activity_test">TestActivity</string>

    <!-- Strings related to sing up and login -->
    <string name="action_login">登录</string>
    <string name="action_input_pass">请输入密码</string>
    <string name="action_sign_up_entry">还没有账号？现在注册</string>
    <string name="action_forget_pass">忘记密码？</string>
    <string name="prompt_phone_number">电话号码</string>
    <string name="prompt_auth_code">验证码</string>
    <string name="action_next_step">下一步</string>
    <string name="action_sign_in_short">确定</string>
    <string name="action_sign_up">注册</string>
    <string name="error_phone_number_null">手机号码不能为空</string>
    <string name="error_invalid_phone_number">手机号码格式错误</string>
    <string name="prompt_pass">设置登录密码</string>
    <string name="error_invalid_password">密码不符合规则</string>
    <string name="error_pass_null">密码不能为空</string>
    <string name="error_phone_or_pass">用户名或密码错误</string>
    <string name="error_incorrect_auth_code">验证码错误</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="resend_after_seconds">秒后重发</string>
    <string name="login_user_service_agreement">登录即代表您同意用户服务协议</string>
    <string name="sign_up_user_service_agreement">注册即代表您同意用户服务协议</string>
    <string name="tip_set_pass">密码由8–20位英文、数字组成，且至少包含一个大写、小写字母和数字</string>
    <string name="tip_incorrect_pass">密码不符合规则，请重新设置</string>
    <string name="success_sign_up">注册成功</string>
    <string name="failed_sign_up">注册失败</string>
    <string name="success_login">登录成功</string>

    <!--Exception Messages-->
    <string name="error_server_connect">服务器连接错误</string>
    <string name="exception_security_module_initial">安全模块初始化异常</string>
    <string name="exception_encrypt">加密异常</string>

    <!--Security Info-->
    <string name="public_key_base64">null</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
