<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_up_title_image_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle.About">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_title_image_height"
                android:background="@android:color/background_light"
                android:fitsSystemWindows="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sign_up_confirm_title_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/sign_up_confirm_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_toolbar_height"
                android:minHeight="@dimen/default_toolbar_height"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/sign_up_confirm_horizontal_margin"
        android:paddingRight="@dimen/sign_up_confirm_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_scrollFlags="scroll">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/sign_up_confirm_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/sign_up_confirm_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/sign_up_confirm_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_up_vertical_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pass_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:theme="@style/CustomEditTextTheme"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/selector_visibility">

                        <EditText
                            android:id="@+id/pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/drawable_padding_size"
                            android:drawableStart="@drawable/ic_lock"
                            android:hint="@string/prompt_pass"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:maxLength="20"
                            android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_general_margin"
                    android:text="@string/tip_set_pass"
                    android:textColor="@color/font_tint_2"
                    android:textSize="@dimen/default_text_size"/>

                <Button
                    android:id="@+id/sign_up_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_confirm_btn_margin_top"
                    android:text="@string/action_sign_up"
                    android:textSize="@dimen/next_button_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_service_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_general_margin"
                    android:gravity="center"
                    android:text="@string/sign_up_user_service_agreement"
                    android:textColor="@color/font_tint"
                    android:textSize="@dimen/agreement_text_size" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>