<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_up_title_image_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle.About"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_title_image_height"
                android:background="@android:color/background_light"
                android:fitsSystemWindows="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sign_up_title_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/sign_up_title_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_toolbar_height"
                android:minHeight="@dimen/default_toolbar_height"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/sign_up_horizontal_margin"
        android:paddingRight="@dimen/sign_up_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_scrollFlags="scroll">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/sign_up_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/sign_up_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/sign_up_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomEditTextTheme">

                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/drawable_padding_size"
                        android:drawableStart="@drawable/ic_phone"
                        android:hint="@string/prompt_phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:theme="@style/CustomEditTextTheme">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/auth_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/drawable_padding_size"
                            android:drawableStart="@drawable/ic_auth"
                            android:hint="@string/prompt_auth_code"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />

                        <TextView
                            android:id="@+id/send_auth_code_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:clickable="true"
                            android:text="@string/send_auth_code"
                            android:textSize="@dimen/send_auth_code_text_size"/>
                    </FrameLayout>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/next_step_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/next_button_margin_top"
                    android:text="@string/action_next_step"
                    android:textSize="@dimen/next_button_text_size"
                    android:textStyle="bold"
                    android:enabled="false"/>

                <TextView
                    android:id="@+id/user_service_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/user_service_agreement_text"
                    android:textSize="@dimen/agreement_text_size"
                    android:textColor="@color/font_tint"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>





